test/foof/errors/duplicate.foo
(define x 23)
(define x 5)
x
(define (foo x x x) x)
(define (foo x) x)
(define (foo _ _ x) x)
foo
(lambda (x x x) x)
(lambda (x _ _) x)
(let ((x 23)
      (x 5))
  x)
(let ((_ 23)
      (_ 5))
  13)
(letrec ((x 23)
         (x 5))
  x)
(letrec ((_ 23)
         (_ 5))
  13)
(structure
 (define x 23)
 (define x 5))
(module (m)
 (define (foo x x x) x)
 (define (foo x) x)
 (define (foo _ _ x) x))
m
